--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
--   id: python-safety-dependencies-check
-    name: safety
-    description: Analyze your Python requirements for known security vulnerabilities
-    entry: safety_check
+-   id: sql-formatter
+    name: sql-formatter
+    description: Format SQL.
+    entry: sql_formatter
     language: python
-    files: requirements
+    files: [sql]
